fixed trainer section with overflow: auto and other css properties

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,4 +145,149 @@ header {
     font-size: 16px;
   }
     /* Hero Style End */
-    
+
+
+    .intro {
+        text-align: center;
+    }
+
+  .intro p {
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    font-size: 20px;
+    /* margin: 0 auto tells the browser to 
+    calculate the margins for us. When the browser is 
+    asked to do this on both sides of an element, 
+    it will do its best to make them even, 
+    thus pushing the element into the center. 
+    Note that this only works for horizontal centering. 
+    margin: auto 0 does not vertically center elements.*/
+    margin: 0 auto;
+  }
+
+  .steps { 
+    text-align: center;
+    background: #fce138;
+  }
+
+
+  .section-title {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    /* We chose to use the inline-block 
+    value instead of the inline value so 
+    it can have the best of both worlds. 
+    It's now an inline element, but things 
+    like padding still behave like they would 
+    on block elements. Coupled with our 
+    text-align property from before, 
+    we now have a center-aligned heading 
+    with an appropriately sized border: */
+    display: inline-block;
+    border-bottom: 3px solid;
+  }
+  
+  /* We separated everything out from the style
+  of the section titles except this. Instead of rewiting
+  the same code on both the Who We Are and the 
+  Who You Are titles, we consolidate the information and only 
+  left this difference out, what was good was that we could use
+  id = "section-title ... (leave space for a second id) primary-border" */
+  .primary-border {
+    border-color: #fce138;
+  }
+  
+  .secondary-border {
+    border-color: #39a6b2;
+  }
+
+  .steps div {
+    margin-bottom: 80px;
+  }
+  
+  .steps img {
+    width: 15%;
+    margin: 10px 0;
+  } 
+  
+  .steps h3 {
+    color: #024e76;
+    font-size: 46px;
+    margin-top: 10px;
+  }
+  
+  .steps p {
+    color: #39a6b2;
+    font-size: 23px;
+  }
+
+  /* using span will allow us to manipluate the text within
+  the text to target just that 
+  <p> blah blah <span> blah </span> </p>
+  span will only target the last blah */
+  .steps span {
+    font-size: 38px;
+  }
+
+  .trainers {
+    text-align: center;
+  }
+
+  .trainer {
+    width: 900px;
+    margin: 0 auto 30px auto;
+    background: #024e76;
+    color: #fce138;
+    overflow: auto;
+    /* In this case, 
+    we floated both elements 
+    (the <img> and <div>), which 
+    means its parent element—the 
+    <article> element—cannot interpret 
+    how much space its inner HTML 
+    content needs and assumes there's 
+    nothing inside it at all. 
+    This means the <article> element's 
+    styles, like background-color, 
+    don't show up because the <article> 
+    element itself is 0 pixels tall. */
+  }
+
+  .trainer img {
+    width: 35%;
+    float: left;
+  }
+  
+  .trainer-bio {
+    padding: 35px;
+    float: left;
+    width: 65%;
+  }
+  /* Next for the text in the bios */
+  .text-left {
+    text-align: left;
+  }
+  
+  .text-right {
+    text-align: right;
+  }
+
+  .trainer-bio h3 {
+    font-size: 32px;
+    margin-bottom: 8px;
+  }
+  
+  .trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+  }
+  
+  .trainer-bio p {
+    font-size: 17px;
+    line-height: 1.3;
+  }
+  And there we go
